Fix scrollbar track color

--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 
 ::-webkit-scrollbar-track {
-    background: rgb(96, 94, 102);
+    background: rgb(32, 33, 36);
 }
 
 
